--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="paymentdAdminApp">
+<html lang="en" ng-app>
 <head>
   <meta charset="utf-8">
   <title>My HTML File</title>
@@ -19,7 +19,7 @@
 
 </head>
 <body>
-Hallo, {{test!!}}  
+Hallo, {{'test!!'}}  
 
     <div ng-view></div>
 
