Folder sctructure changed / routing.js renamed

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="paymentAdminApp">
 <head>
   <meta charset="utf-8">
   <title>My HTML File</title>
@@ -11,7 +11,7 @@
 
   	<script src="js/angular/angular.js"></script>
   	<script src="js/angular/angular-route.js"></script>
- 	<script src="js/controllers/routing.js"></script>
+ 	<script src="js/controllers/app.js"></script>
 
 
  
