--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   	<script src="js/angular/angular.js"></script>
   	<script src="js/angular/angular-route.js"></script>
- 	<script src="js/controllers/app.js"></script>
+ 	<script src="js/app.js"></script>
 
 
  
