--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="paymentAdminApp">
+<html lang="en" >
 <head>
   <meta charset="utf-8">
   <title>My HTML File</title>
@@ -9,11 +9,13 @@
   	<script src="js/angular/angular.js"></script>
   	<script src="js/angular/angular-route.js"></script>
  	<script src="js/app.js"></script>
+ 	<script src="js/controllers.js"></script>
 </head>
 <body>
-Hallo, {{'test!!'}}  
-
+<div ng-app="paymentAdminApp">
     <div ng-view></div>
+</div>
 
 </body>
+
 </html>
