added logout to nav; added get currency all ;cleand up a bit

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en" >
 <head>
   <meta charset="utf-8">
-  <title>My HTML File</title>
+  <title>paymentd admingui</title>
 	<link rel="stylesheet" href="css/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="css/admingui.css">
-  	
+  		
   	<script src="js/angular/angular.js"></script>
   	<script src="js/angular/angular-route.js"></script>
  	<script src="js/app.js"></script>
@@ -13,9 +13,6 @@
 </head>
 <body>
 <div ng-app="paymentAdminApp">
-
-
-
 <div ng-view></div>
 </div>
 
