--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 <div ng-app="paymentAdminApp">
-	<div ng-controller="NavCtrl">
+	<div class="nav" ng-controller="NavCtrl">
 		<nav class="nav-menu" menu-data="menu"></nav>
 	</div>
 	<div ng-view></div>
