refactored the app structure modular

--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
   		
   	<script src="js/angular/angular.js"></script>
   	<script src="js/angular/angular-route.js"></script>
- 	<script src="js/app.js"></script>
- 	<script src="js/controllers.js"></script>
- 	<script src="js/directives.js"></script>
+ 	<script src="js/pdgui/app.js"></script>
+ 	<script src="js/pdgui/common/directives.js"></script>
+ 	<script src="js/pdgui/currency/CurrencyCtrl.js"></script>
+ 	<script src="js/pdgui/navigation/NavigationCtrl.js"></script>
+ 	<script src="js/pdgui/paymentmethod/PaymentMethodCtrl.js"></script>
+ 	<script src="js/pdgui/principal/PrincipalCtrl.js"></script>
+ 	<script src="js/pdgui/project/ProjectCtrl.js"></script>
+ 	<script src="js/pdgui/user/UserModule.js"></script>
+ 	<script src="js/pdgui/user/UserCtrl.js"></script>
+ 	<script src="js/pdgui/user/LoginCtrl.js"></script>
+ 	<script src="js/pdgui/user/AuthService.js"></script>
 </head>
 <body>
 
